# backend/src/main/java/io/github/ctrl_alt_elite/hackathon/controllers/AuthApi.java
@@ -1,0 +1,145 @@
+/**
+ * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech) (7.8.0).
+ * https://openapi-generator.tech
+ * Do not edit the class manually.
+ */
+package io.github.ctrl_alt_elite.hackathon.controllers;
+
+import io.swagger.v3.oas.annotations.ExternalDocumentation;
+import io.swagger.v3.oas.annotations.Operation;
+import io.swagger.v3.oas.annotations.Parameter;
+import io.swagger.v3.oas.annotations.Parameters;
+import io.swagger.v3.oas.annotations.media.ArraySchema;
+import io.swagger.v3.oas.annotations.media.Content;
+import io.swagger.v3.oas.annotations.media.Schema;
+import io.swagger.v3.oas.annotations.responses.ApiResponse;
+import io.swagger.v3.oas.annotations.security.SecurityRequirement;
+import io.swagger.v3.oas.annotations.tags.Tag;
+import io.swagger.v3.oas.annotations.enums.ParameterIn;
+import org.springframework.http.HttpStatus;
+import org.springframework.http.MediaType;
+import org.springframework.http.ResponseEntity;
+import org.springframework.validation.annotation.Validated;
+import org.springframework.web.bind.annotation.*;
+import org.springframework.web.context.request.NativeWebRequest;
+import org.springframework.web.multipart.MultipartFile;
+
+import jakarta.validation.Valid;
+import jakarta.validation.constraints.*;
+import java.util.List;
+import java.util.Map;
+import java.util.Optional;
+import jakarta.annotation.Generated;
+
+@Generated(value = "org.openapitools.codegen.languages.SpringCodegen", date = "2025-11-14T17:14:34.420633+03:00[Europe/Moscow]", comments = "Generator version: 7.8.0")
+@Validated
+@Tag(name = "Auth", description = "the Auth API")
+public interface AuthApi {
+
+    default Optional<NativeWebRequest> getRequest() {
+        return Optional.empty();
+    }
+
+    /**
+     * POST /v1/auth : Step of authentification
+     * Return JWT, if nonce signed correctly
+     *
+     * @param address address in blockchain for auth (required)
+     * @param body  (required)
+     * @return successful auth (status code 200)
+     *         or Bad Request (status code 400)
+     *         or Unauthorized (status code 401)
+     */
+    @Operation(
+        operationId = "auth",
+        summary = "Step of authentification",
+        description = "Return JWT, if nonce signed correctly",
+        tags = { "Auth" },
+        responses = {
+            @ApiResponse(responseCode = "200", description = "successful auth", content = {
+                @Content(mediaType = "application/json", schema = @Schema(implementation = String.class))
+            }),
+            @ApiResponse(responseCode = "400", description = "Bad Request", content = {
+                @Content(mediaType = "application/json", schema = @Schema(implementation = String.class))
+            }),
+            @ApiResponse(responseCode = "401", description = "Unauthorized", content = {
+                @Content(mediaType = "application/json", schema = @Schema(implementation = String.class))
+            })
+        }
+    )
+    @RequestMapping(
+        method = RequestMethod.POST,
+        value = "/v1/auth",
+        produces = { "application/json" },
+        consumes = { "application/json" }
+    )
+    
+    default ResponseEntity<String> auth(
+        @NotNull @Parameter(name = "Address", description = "address in blockchain for auth", required = true, in = ParameterIn.HEADER) @RequestHeader(value = "Address", required = true) String address,
+        @Parameter(name = "body", description = "", required = true) @Valid @RequestBody String body
+    ) {
+        getRequest().ifPresent(request -> {
+            for (MediaType mediaType: MediaType.parseMediaTypes(request.getHeader("Accept"))) {
+                if (mediaType.isCompatibleWith(MediaType.valueOf("application/json"))) {
+                    String exampleString = "\"BABABABAB\"";
+                    ApiUtil.setExampleResponse(request, "application/json", exampleString);
+                    break;
+                }
+                if (mediaType.isCompatibleWith(MediaType.valueOf("application/json"))) {
+                    String exampleString = "\"invalid body\"";
+                    ApiUtil.setExampleResponse(request, "application/json", exampleString);
+                    break;
+                }
+                if (mediaType.isCompatibleWith(MediaType.valueOf("application/json"))) {
+                    String exampleString = "\"error\"";
+                    ApiUtil.setExampleResponse(request, "application/json", exampleString);
+                    break;
+                }
+            }
+        });
+        return new ResponseEntity<>(HttpStatus.NOT_IMPLEMENTED);
+
+    }
+
+
+    /**
+     * GET /v1/auth/nonce : Step of authentification
+     * Returns nonce for ethereum sign
+     *
+     * @param address address in blockchain for auth (required)
+     * @return message for signing (status code 200)
+     */
+    @Operation(
+        operationId = "authNonce",
+        summary = "Step of authentification",
+        description = "Returns nonce for ethereum sign",
+        tags = { "Auth" },
+        responses = {
+            @ApiResponse(responseCode = "200", description = "message for signing", content = {
+                @Content(mediaType = "application/json", schema = @Schema(implementation = String.class))
+            })
+        }
+    )
+    @RequestMapping(
+        method = RequestMethod.GET,
+        value = "/v1/auth/nonce",
+        produces = { "application/json" }
+    )
+    
+    default ResponseEntity<String> authNonce(
+        @NotNull @Parameter(name = "Address", description = "address in blockchain for auth", required = true, in = ParameterIn.HEADER) @RequestHeader(value = "Address", required = true) String address
+    ) {
+        getRequest().ifPresent(request -> {
+            for (MediaType mediaType: MediaType.parseMediaTypes(request.getHeader("Accept"))) {
+                if (mediaType.isCompatibleWith(MediaType.valueOf("application/json"))) {
+                    String exampleString = "\"nonce\"";
+                    ApiUtil.setExampleResponse(request, "application/json", exampleString);
+                    break;
+                }
+            }
+        });
+        return new ResponseEntity<>(HttpStatus.NOT_IMPLEMENTED);
+
+    }
+
+}
